Resolves: tdf#128667 crash in csv import from paste

Change-Id: Id50d0a7e4f176ccf83292495cb229da492fbf381
Reviewed-on: https://gerrit.libreoffice.org/82287
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>