sc/source/ui/view/viewfun5.cxx
@@ -378,6 +378,7 @@ bool ScViewFunc::PasteDataFormat( SotClipboardFormatId nFormatId,
 
                         if (bShowErrorDialog)
                             ErrorMessage(STR_PASTE_ERROR);
+                        pDlg->disposeOnce();
                     });
                     return true;
                 }
